# frisk

./: Cargo.toml  Readme.md
src/: main.rs
src/core/: conf.rs  mod.rs  spot.rs
