[package]
name = "frisk"
version = "0.1.1"
edition = "2021"
description = "Spot file(s) or folder(s) in your filesystem by its name"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
colored = "2"
jwalk = "0.8.1"
regex = "1.7.0"
